fixed resume on mobile

--- a/styles/partials/_resume.scss
+++ b/styles/partials/_resume.scss
@@ -2,3 +2,9 @@
     text-align: center;
     padding: 20px 0;
 }
+
+@media (max-width: 900px){
+    .resume{
+        padding: 60px 0;
+    }
+}
