--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1075,4 +1075,10 @@ nav input {
   text-align: center;
   padding: 20px 0;
 }
+
+@media (max-width: 900px) {
+  .resume {
+    padding: 60px 0;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
